# storm-stored

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  config_spec.toml  license_header
cli/: Cargo.toml  build.rs
cli/shell/: _store-cli  _store-cli.ps1  store-cli.bash
cli/src/: command.rs  main.rs  opts.rs  util.rs
rpc/: Cargo.toml
rpc/src/: client.rs  error.rs  lib.rs  messages.rs  reply.rs  request.rs  types.rs
shell/: _store-cli  _store-cli.ps1  _stored  _stored.ps1  store-cli.bash  stored.bash
src/: config.rs  error.rs  lib.rs  opts.rs  service.rs
src/stored/: mod.rs  service.rs
