[workspace]
default-members = [".", "rpc", "cli"]
members = [".", "rpc", "cli"]

[package]
name = "store_daemon"
description = "Storage daemon"
version = "0.9.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
license = "MIT"
keywords = ["daemon", "sled", "database"]
categories = ["database"]
edition = "2021"
rust-version = "1.56.1"
readme = "README.md"
build = "build.rs"
exclude = [".github", "Dockerfile", ".dockerignore", "contrib", "doc"]

[lib]
name = "stored"

[[bin]]
name = "stored"
required-features = ["server"]

[dependencies]
# LNP/BP crates
amplify = "3.13.0"
strict_encoding = "0.9.0"
commit_verify = "0.9.0"
internet2 = { version = "0.9.0", features = ["keygen", "zmq"] }
microservices = { version = "0.9.0", default-features = false, features = ["node"] }
bitcoin_hashes = "0.11.0"
storm-core = "0.9.0"
store_rpc = { version = "0.9.0", path = "rpc" }
# DB
sled = "0.34"
# OS
chrono = "0.4"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
env_logger = "0.7"
clap = { version = "~3.2.23", optional = true, features = ["env", "derive"] }
settings = { version = "0.10", package = "config", optional = true }
configure_me = { version = "0.4", optional = true }
colored = "2.0.0"
shellexpand = { version = "2", optional = true }

[build-dependencies]
amplify = "3.13.0"
internet2 = "0.9.0"
microservices = { version = "0.9.0", default-features = false, features = ["shell"] }
storm-core = "0.9.0"
store_rpc = { version = "0.9.0", path = "rpc" }
clap = { version = "~3.2.23", features = ["env", "derive"] }
clap_complete = "~3.2.5"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_debug"] }
shellexpand = "2"
configure_me_codegen = "0.4"

[features]
default = ["server"]

# Server is a standalone application that runs daemons.
# Required for all apps that can be launched from command-line shell as binaries
# (i.e. both servers and cli)
server = ["microservices/server", "clap", "settings", "configure_me",
          "amplify/parse_arg", "shellexpand"]
# Embedded is an app that contains embedded node and that talks to it through
# integration layer
embedded = ["microservices/embedded"]

[package.metadata.configure_me]
spec = "config_spec.toml"
