[package]
name = "store-cli"
description = "Storage daemon command-line interface"
version = "0.8.0-beta.1"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
license = "MIT"
keywords = ["daemon", "sled", "database"]
categories = ["database", "command-line-tools"]
edition = "2021"
rust-version = "1.56.0"
readme = "../README.md"
build = "build.rs"

[[bin]]
path = "src/main.rs"
name = "store-cli"

[dependencies]
amplify = "3.12.0"
internet2 = "0.8.0-beta.1"
microservices = { version = "0.8.0-rc.2", default-features = false, features = ["cli"] }
storm-core = "0.1.0"
store_rpc = { version = "0.8.0-beta.2", path = "../rpc" }
clap = { version = "~3.1.18", features = ["derive", "env"] }
log = "0.4.14"
shellexpand = "2.1"
colored = "2"

[build-dependencies]
amplify = "3.12.0"
clap = { version = "~3.1.18", features = ["derive", "env"] }
clap_complete = "~3.1.4"
internet2 = "0.8.0-beta.1"
storm-core = "0.1.0"
store_rpc = { version = "0.8.0-beta.2", path = "../rpc" }
configure_me_codegen = "0.4"
