[package]
name = "store-cli"
description = "Storage daemon command-line interface"
version = "0.8.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
license = "MIT"
keywords = ["daemon", "sled", "database"]
categories = ["database", "command-line-utilities"]
edition = "2021"
rust-version = "1.56.0"
readme = "../README.md"
build = "build.rs"

[[bin]]
path = "src/main.rs"
name = "store-cli"

[dependencies]
amplify = "3.13.0"
internet2 = "0.8.0"
microservices = { version = "0.8.0", default-features = false, features = ["cli"] }
storm-core = "0.8.0"
store_rpc = { version = "0.8.0", path = "../rpc" }
clap = { version = "~3.1.18", features = ["derive", "env"] }
log = "0.4.14"
shellexpand = "2.1"
colored = "2"

[build-dependencies]
amplify = "3.13.0"
clap = { version = "~3.1.18", features = ["derive", "env"] }
clap_complete = "~3.1.4"
internet2 = "0.8.0"
storm-core = "0.8.0"
store_rpc = { version = "0.8.0", path = "../rpc" }
configure_me_codegen = "0.4"
