[package]
name = "store_rpc"
description = "Storage daemon RPC API"
version = "0.8.0-rc.1"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
license = "MIT"
keywords = ["daemon", "sled", "database"]
categories = ["database"]
edition = "2021"
rust-version = "1.56.0"
readme = "../README.md"

[lib]
name = "store_rpc"

[dependencies]
amplify = "3.12.0"
strict_encoding = "0.8.0"
commit_verify = "0.8.0"
internet2 = "0.8.0"
microservices = { version = "0.8.0", default-features = false, features = ["client"] }
storm-core = "0.7.1"
rand = "0.8"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.8", optional = true }
serde_yaml = { version = "0.8.23", optional = true }
log = "0.4.14"
colored = "2.0.0"

[features]
default = ["serde"]
all = ["serde"]
serde = [
    "serde_crate", "serde_with", "serde_yaml",
    "amplify/serde", "internet2/serde", "microservices/serde",
]
