[package]
name = "store_rpc"
description = "Storage daemon RPC API"
version = "0.9.0"
authors = ["Dr. Maxim Orlovsky <orlovsky@lnp-bp.org>"]
license = "MIT"
keywords = ["daemon", "sled", "database"]
categories = ["database"]
edition = "2021"
rust-version = "1.56.0"
readme = "../README.md"

[lib]
name = "store_rpc"

[dependencies]
amplify = "3.13.0"
strict_encoding = "0.9.0"
commit_verify = "0.9.0"
internet2 = "0.9.0"
microservices = { version = "0.9.0", default-features = false, features = ["client"] }
storm-core = "0.9.0"
rand = "0.8.5"
serde_crate = { package = "serde", version = "1", features = ["derive"], optional = true }
serde_with = { version = "1.14", optional = true }
serde_yaml = { version = "0.9.16", optional = true }
log = "0.4.14"
colored = "2.0.0"

[dev-dependencies]
bitcoin_hashes = "0.11.0"

[features]
default = ["serde"]
all = ["serde"]
serde = [
    "serde_crate", "serde_with", "serde_yaml",
    "amplify/serde", "internet2/serde", "microservices/serde",
]
